--- a/starter/index.html
+++ b/starter/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css">
   </head>
 
   <body>
-    <div class="scores"><a href="highscores.html">View Highscores</a></div>
+    <div class="scores">
+      <a href="highscores.html">View Highscores</a>
+    </div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
+    <div class="timer">
+      Time: <span id="time">0</span>
+    </div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
@@ -27,14 +31,14 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices"></div>
       </div>
 
       <div id="end-screen" class="hide">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
-          Enter initials: <input type="text" id="initials" max="3" />
+          Enter initials: <input type="text" id="initials" maxlength="3">
           <button id="submit">Submit</button>
         </p>
       </div>
