--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Highscores</title>
-
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-
   <body>
     <div class="wrapper">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
-
-      <a href="index.html"><button>Go Back</button></a>
-      <button id="clear">Clear Highscores</button>
+      <nav>
+        <a href="index.html"><button>Go Back</button></a>
+        <button id="clear">Clear Highscores</button>
+      </nav>
     </div>
-
     <script src="./assets/js/scores.js"></script>
   </body>
 </html>
