added working timer

--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -10,9 +10,14 @@
   <body>
     <div class="wrapper">
       <h1>Highscores</h1>
-      <ol id="highscores"></ol>
+      <ol id="highscores">
+
+        <!-- Highscores are dynamically generated and added here -->
+      </ol>
       <nav>
-        <a href="index.html"><button>Go Back</button></a>
+        <a href="index.html">
+          <button>Go Back</button>
+        </a>
         <button id="clear">Clear Highscores</button>
       </nav>
     </div>
