--- a/starter/index.html
+++ b/starter/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
   <body>
@@ -14,9 +14,7 @@
       <a href="highscores.html">View Highscores</a>
     </div>
 
-    <div class="timer">
-      Time: <span id="time">0</span>
-    </div>
+    <div class="timer">Time: <span id="time">0</span></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
@@ -38,15 +36,17 @@
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
         <p>
-          Enter initials: <input type="text" id="initials" maxlength="3">
+          Enter initials: <input type="text" id="initials" maxlength="3" />
           <button id="submit">Submit</button>
         </p>
+        <button id="end">End</button>
       </div>
 
       <div id="feedback" class="feedback hide"></div>
     </div>
 
     <script src="./assets/js/questions.js"></script>
+    <!--<script src="./assets/js/scores.js"></script>-->
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
