--- a/starter/index.html
+++ b/starter/index.html
@@ -20,7 +20,7 @@
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Try to answer the following code-related questions within the time
+          Answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
