cleaned up the files structure

--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Highscores</title>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="starter/assets/css/styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -21,6 +21,6 @@
         <button id="clear">Clear Highscores</button>
       </nav>
     </div>
-    <script src="./assets/js/scores.js"></script>
+    <script src="starter/assets/JS/scores.js"></script>
   </body>
 </html>
