--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="starter/assets/css/styles.css" />
   </head>
 
   <body>
@@ -45,8 +45,8 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
-    <script src="./assets/js/questions.js"></script>
+    <script src="./starter/assets/JS/questions.js"></script>
     <!--<script src="./assets/js/scores.js"></script>-->
-    <script src="./assets/js/script.js"></script>
+    <script src="./starter/assets/JS/script.js"></script>
   </body>
 </html>
